# the-apiary

./: .gitignore  .gitmodules  NECTAR-ISSUES.md  README.md  cursor_the_hive_and_hive_doctor.md  hive-release.json  hive-release.schema.md
.cowork/: README.md  hooks.json  plugin.json
.cursor/: model-comparison-matrix.md
.cursor/agents/: adr-writing-worker-bee.md  affiliate-referral-program-worker-bee.md  agile-scrum-worker-bee.md  ai-coding-tools-worker-bee.md  ai-tools-platform-worker-bee.md  alt-ads-platforms-worker-bee.md  api-docs-worker-bee.md  app-store-submission-worker-bee.md  asset-worker-bee.md  auth-worker-bee.md  blogging-content-strategy-worker-bee.md  branching-strategy-worker-bee.md  changelog-release-notes-worker-bee.md  ci-release-worker-bee.md  code-forensics-worker-bee.md  code-review-pr-worker-bee.md  cold-outreach-worker-bee.md  crm-integration-worker-bee.md  cron-scheduling-worker-bee.md  csv-xlsx-import-export-worker-bee.md  cursor-ide-worker-bee.md  customer-support-tooling-worker-bee.md  dark-mode-theming-worker-bee.md  db-worker-bee.md  deeplake-dataset-worker-bee.md  dependency-audit-worker-bee.md  design-system-worker-bee.md  devops-worker-bee.md  discord-bot-worker-bee.md  discovery-research-worker-bee.md  docs-site-worker-bee.md  embeddings-runtime-worker-bee.md  estimation-worker-bee.md  font-loading-worker-bee.md  git-worker-bee.md  github-repo-health-worker-bee.md  harness-integration-worker-bee.md  hiring-ats-worker-bee.md  hivenectar-worker-bee.md  hr-payroll-worker-bee.md  (+46 more)
.cursor/commands/: the-beekeeper.md  the-smoker.md
.cursor/rules/: deeplake-spelling.mdc  implementation-mode-default.mdc  no-em-dashes.mdc  plan-construction-protocol.mdc  respect-agent-work-boundaries.mdc
.cursor/skills/python-stinger/templates/: celery-app.py  celery-task.py  channels-consumer.py  channels-routing.py  conftest.py  django-migration-runpython.py  django-ninja-router.py  django-orm-queryset-pattern.py  dockerfile-django-uv  factory-boy-factory.py  fastapi-service.py  pyproject.toml  pyrightconfig.json  ruff.toml  settings-base.py  settings-dev.py  settings-prod.py
.github/scripts/: validate-hive-release-manifest.mjs
.github/workflows/: deploy-install-site.yaml  desktop-build.yml  manifest-validate.yaml  release-train.yaml
branding/concepts/: logo-concepts.html  logo-finals.html  queen-concepts.html
branding/honeycomb/: .thumbnail  SKILL.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  readme.md  styles.css
desktop/: README.md  electron-builder.yml  package-lock.json  package.json  tsconfig.json
desktop/scripts/: check-fleet-versions.mjs  generate-icons.mjs
desktop/src/: sanity.test.ts
product-documentation/: README.md  onepager_fix.py  onepager_gen.py
product-documentation/markdown/: doctor-stories-user-guide.md  doctor-technical-manual.md  hive-stories-user-guide.md  hive-technical-manual.md  honeycomb-stories-user-guide.md  honeycomb-technical-manual.md  nectar-stories-user-guide.md  nectar-technical-manual.md  queen-stories-user-guide.md  queen-technical-manual.md  the-apiary-complete-compendium.md
product-documentation/wiifm/: wiifm_gen.py
product-documentation/word/: _brand-template.docx  doctor-stories-user-guide.docx  doctor-technical-manual.docx  hive-stories-user-guide.docx  hive-technical-manual.docx  (+7 more)
(+2432 files in other folders)
