[project]
name = "myapp"
version = "0.1.0"
description = "Replace with a real description."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "django>=5.0,<6.0",
    "django-ninja>=1.3",
    "django-cors-headers>=4.4",
    "django-environ>=0.11",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "celery[redis]>=5.4",
    "channels[daphne]>=4.1",
    "channels-redis>=4.2",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "argon2-cffi>=23.1",
    "redis>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "respx>=0.21",
    "ruff>=0.6",
    "pyright>=1.1",
    "django-debug-toolbar>=4.4",
    "django-extensions>=3.2",
    "ipython>=8.27",
]
prod = [
    "gunicorn>=23.0",
    "uvicorn[standard]>=0.30",
    "sentry-sdk[django]>=2.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "config"]

# ---------- Ruff ----------
[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d",
    ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn",
    ".tox", ".venv", ".vscode",
    "__pypackages__", "_build", "buck-out", "build", "dist",
    "node_modules", "site-packages", "venv",
    "**/migrations",
]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "UP", "B", "SIM", "DJ", "ASYNC", "C4", "S", "RUF", "PT", "T20",
]
ignore = ["E501", "S101", "B008", "B905"]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "S106", "S311"]
"**/conftest.py" = ["S101"]
"**/migrations/**" = ["E", "F", "I", "UP", "B", "SIM"]
"**/__init__.py" = ["F401"]
"**/settings/**.py" = ["F405", "F403"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "ninja.Query"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# ---------- pytest ----------
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py", "tests.py"]
addopts = "--reuse-db --tb=short -ra --strict-markers"
markers = [
    "slow: tests slower than 1s",
    "integration: tests that hit external services (skipped by default)",
]
asyncio_mode = "auto"

# ---------- coverage ----------
[tool.coverage.run]
source = ["apps", "config"]
omit = ["*/migrations/*", "*/tests/*", "*/management/commands/*"]
branch = true

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
